@@ -1,3 +1,10 @@
+2009-10-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
+	Extend the library.
+	
+	* tools/include/svp/compiler.h: Introduce new macro
+	`use'. (req. by M. Lankamp)
+
 2009-10-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
 	Optimize the root SEP allocator.
